turtlebot3_ws/log/build_2022-09-04_18-28-47/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 166
    if(laser.leste > laser.oeste && laser.nordeste >= 0.5): #mais espaço na direita
                                  ^
SyntaxError: invalid syntax

